--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "ejs": "^3.1.8",
+    "env": "^0.0.2",
     "express": "^4.17.1",
     "nightmare": "^2.8.0",
     "socket.io": "^2.2.0"
