--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "cheerio": "^1.0.0-rc.12",
     "ejs": "^3.1.8",
     "env": "^0.0.2",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "nightmare": "^2.8.0",
+    "node-fetch": "^3.3.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
