--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "env": "^0.0.2",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "mongoose": "^7.0.0",
     "nightmare": "^2.8.0",
     "node-fetch": "^3.3.0",
     "socket.io": "^2.2.0"
